refactor: drop redundant query result
