# backend/PhotoBank.ViewModel.Dto/QueryResult.cs
@@ -1,6 +1,0 @@
-namespace PhotoBank.ViewModel.Dto
-{
-    public class QueryResult : PageResponse<PhotoItemDto>
-    {
-    }
-}
