# openapi.yaml
@@ -260,13 +260,13 @@ paths:
           content:
             text/plain:
               schema:
-                $ref: '#/components/schemas/QueryResult'
+                $ref: '#/components/schemas/PageResponseOfPhotoItemDto'
             application/json:
               schema:
-                $ref: '#/components/schemas/QueryResult'
+                $ref: '#/components/schemas/PageResponseOfPhotoItemDto'
             text/json:
               schema:
-                $ref: '#/components/schemas/QueryResult'
+                $ref: '#/components/schemas/PageResponseOfPhotoItemDto'
         '400':
           description: Bad Request
           content:
@@ -913,12 +913,6 @@ components:
             $ref: '#/components/schemas/PhotoItemDto'
           nullable: true
       additionalProperties: false
-    QueryResult:
-      allOf:
-        - $ref: '#/components/schemas/PageResponseOfPhotoItemDto'
-        - type: object
-          properties: { }
-          additionalProperties: false
     RegisterRequestDto:
       required:
         - email
